Ajout balise html pour que l'app soit installable sur apple

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#000000" />
     <title>Poker MTT Companion</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   <body>
     <div id="root"></div>
